fix: resolve overflow bug on lists

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -188,6 +188,13 @@ button {
 main {
   grid-area: main-container;
   padding: 2em 0;
+  min-height: 0;
+}
+
+main h2 {
+  color: var(--color-text-light);
+  font-weight: 600;
+  margin-bottom: 1.2em;
 }
 
 .home-container {
@@ -202,24 +209,27 @@ main {
   grid-template-columns: 40vw 30vw;
 }
 
-.home-container h2 {
-  color: var(--color-text-light);
-  font-weight: 600;
-  margin-bottom: 1.2em;
-}
-
 .home-container .top-artists-container {
   grid-area: top-artists;
+  overflow: unset;
+}
+
+.home-container .trending-songs-container {
+  grid-area: top-tracks;
 }
 
 .top-artists-container,
 .trending-songs-container {
+  height: 100%;
+  overflow: hidden;
   color: var(--color-text-light);
 }
 
 .trending-songs-container ul {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .trending-songs-container ul li {
